// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextQuestionWidget Use GraphQL widget data Product question does not render for guest if they dont have the corresponding product selected 1`] = `
<div
  class=""
>
  <div>
    <div />
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data Text product question header does not render for invitee or guest when they select product but have no first or last name 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data Text product question header does not render for invitee or guest when they select product but have no first or last name w/ CommentBox 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data Text product question header renders for invitee and guest when they select product but have only first or last name 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data Text product question header renders for invitee and guest when they select product but have only first or last name w/ CommentBox 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data Text product question renders for invitee and guests when they both select associated product 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data Text product question renders for invitee and guests when they both select associated product w/ CommentBox 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text product question does not render when associated product is not selected 1`] = `
<div
  class=""
>
  <div>
    <div />
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text product question renders when associated product is selected 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question defaults to General if format is SPACE ONLY 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion3"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion3"
                  maxlength="16000"
                  name="textQuestion3"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question defaults to General if format is SPACE ONLY 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion3"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion3"
                  maxlength="16000"
                  name="textQuestion3"
                  type="text"
                  value="text answer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question defaults to General if format is SPACE ONLY 3`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion3"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion3"
                  maxlength="16000"
                  name="textQuestion3"
                  type="text"
                  value="123ABC?5"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question defaults to General if format is SPACE ONLY 4`] = `
Object {
  "eventAnswers": Object {
    "textQuestion3": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "123ABC?5",
        },
      ],
      "questionId": "textQuestion3",
    },
  },
  "personalInformation": Object {
    "firstName": "attendee",
    "lastName": "1",
  },
}
`;

exports[`TextQuestionWidget Use GraphQL widget data text question defaults to General if format is not available 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question defaults to General if format is not available 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  type="text"
                  value="text answer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question defaults to General if format is not available 3`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  type="text"
                  value="123ABC?5"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question defaults to General if format is not available 4`] = `
Object {
  "eventAnswers": Object {
    "textQuestion2": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "123ABC?5",
        },
      ],
      "questionId": "textQuestion2",
    },
  },
  "personalInformation": Object {
    "firstName": "attendee",
    "lastName": "1",
  },
}
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and allows invitee to enter text on behalf of guest 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and allows invitee to enter text on behalf of guest 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value="text answer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and allows invitee to enter text on behalf of guest 3`] = `
Object {
  "eventAnswers": Object {
    "textQuestion1": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "text answer",
        },
      ],
      "questionId": "textQuestion1",
    },
  },
}
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and allows you to enter text 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and allows you to enter text 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value="text answer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and allows you to enter text 3`] = `
Object {
  "eventAnswers": Object {
    "textQuestion1": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "text answer",
        },
      ],
      "questionId": "textQuestion1",
    },
  },
  "personalInformation": Object {
    "firstName": "attendee",
    "lastName": "1",
  },
}
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and validates with custom answer format 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  type="text"
                  value=""
                />
                <div
                  class=""
                >
                  NucleusWidgets_InstructionalText_CustomAnswerFormatCharacterPosition__resx:{"format":"999AAA?9"}
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and validates with custom answer format 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=" formElementWithErrors"
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  style="border-color: #e75430; padding-right: 1.8em;"
                  type="text"
                  value="text answer"
                />
              </div>
              <div
                class=""
                data-cvent-id="error-messages"
                role="alert"
              >
                <div
                  class=""
                  data-cvent-id="error-message"
                  role="alert"
                >
                  <div>
                    <div>
                      NucleusWidgets_Validations_CustomAnswerFormatCharacterPosition__resx:{"format":"999AAA?9"}
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and validates with custom answer format 3`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  style="padding-right: 1.8em;"
                  type="text"
                  value="123ABC?5"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use GraphQL widget data text question renders and validates with custom answer format 4`] = `
Object {
  "eventAnswers": Object {
    "textQuestion2": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "123ABC?5",
        },
      ],
      "questionId": "textQuestion2",
    },
  },
  "personalInformation": Object {
    "firstName": "attendee",
    "lastName": "1",
  },
}
`;

exports[`TextQuestionWidget Use GraphQL widget data text session product question renders when associated product is selected 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="sessionTextQuestion3"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="sessionTextQuestion3"
                  maxlength="16000"
                  name="sessionTextQuestion3"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data Product question does not render for guest if they dont have the corresponding product selected 1`] = `
<div
  class=""
>
  <div>
    <div />
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data Text product question header does not render for invitee or guest when they select product but have no first or last name 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data Text product question header does not render for invitee or guest when they select product but have no first or last name w/ CommentBox 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data Text product question header renders for invitee and guest when they select product but have only first or last name 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data Text product question header renders for invitee and guest when they select product but have only first or last name w/ CommentBox 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data Text product question renders for invitee and guests when they both select associated product 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data Text product question renders for invitee and guests when they both select associated product w/ CommentBox 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1-dummyGuestEventRegId"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <span>
                <textarea
                  class="textarea"
                  data-cvent-id="input"
                  id="textQuestion1-dummyGuestEventRegId"
                  maxlength="16000"
                  name="textQuestion1-dummyGuestEventRegId"
                  placeholder=""
                  style="box-sizing: border-box; overflow: hidden; height: 0px;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text product question does not render when associated product is not selected 1`] = `
<div
  class=""
>
  <div>
    <div />
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text product question renders when associated product is selected 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question defaults to General if format is SPACE ONLY 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion3"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion3"
                  maxlength="16000"
                  name="textQuestion3"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question defaults to General if format is SPACE ONLY 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion3"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion3"
                  maxlength="16000"
                  name="textQuestion3"
                  type="text"
                  value="text answer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question defaults to General if format is SPACE ONLY 3`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion3"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion3"
                  maxlength="16000"
                  name="textQuestion3"
                  type="text"
                  value="123ABC?5"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question defaults to General if format is SPACE ONLY 4`] = `
Object {
  "eventAnswers": Object {
    "textQuestion3": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "123ABC?5",
        },
      ],
      "questionId": "textQuestion3",
    },
  },
  "personalInformation": Object {
    "firstName": "attendee",
    "lastName": "1",
  },
}
`;

exports[`TextQuestionWidget Use Redux widget data text question defaults to General if format is not available 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question defaults to General if format is not available 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  type="text"
                  value="text answer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question defaults to General if format is not available 3`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  type="text"
                  value="123ABC?5"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question defaults to General if format is not available 4`] = `
Object {
  "eventAnswers": Object {
    "textQuestion2": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "123ABC?5",
        },
      ],
      "questionId": "textQuestion2",
    },
  },
  "personalInformation": Object {
    "firstName": "attendee",
    "lastName": "1",
  },
}
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and allows invitee to enter text on behalf of guest 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and allows invitee to enter text on behalf of guest 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value="text answer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and allows invitee to enter text on behalf of guest 3`] = `
Object {
  "eventAnswers": Object {
    "textQuestion1": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "text answer",
        },
      ],
      "questionId": "textQuestion1",
    },
  },
}
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and allows you to enter text 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and allows you to enter text 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion1"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion1"
                  maxlength="16000"
                  name="textQuestion1"
                  type="text"
                  value="text answer"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and allows you to enter text 3`] = `
Object {
  "eventAnswers": Object {
    "textQuestion1": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "text answer",
        },
      ],
      "questionId": "textQuestion1",
    },
  },
  "personalInformation": Object {
    "firstName": "attendee",
    "lastName": "1",
  },
}
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and validates with custom answer format 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  type="text"
                  value=""
                />
                <div
                  class=""
                >
                  NucleusWidgets_InstructionalText_CustomAnswerFormatCharacterPosition__resx:{"format":"999AAA?9"}
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and validates with custom answer format 2`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=" formElementWithErrors"
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  style="border-color: #e75430; padding-right: 1.8em;"
                  type="text"
                  value="text answer"
                />
              </div>
              <div
                class=""
                data-cvent-id="error-messages"
                role="alert"
              >
                <div
                  class=""
                  data-cvent-id="error-message"
                  role="alert"
                >
                  <div>
                    <div>
                      NucleusWidgets_Validations_CustomAnswerFormatCharacterPosition__resx:{"format":"999AAA?9"}
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and validates with custom answer format 3`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="textQuestion2"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="textQuestion2"
                  maxlength="16000"
                  name="textQuestion2"
                  style="padding-right: 1.8em;"
                  type="text"
                  value="123ABC?5"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextQuestionWidget Use Redux widget data text question renders and validates with custom answer format 4`] = `
Object {
  "eventAnswers": Object {
    "textQuestion2": Object {
      "answers": Array [
        Object {
          "answerType": "Text",
          "text": "123ABC?5",
        },
      ],
      "questionId": "textQuestion2",
    },
  },
  "personalInformation": Object {
    "firstName": "attendee",
    "lastName": "1",
  },
}
`;

exports[`TextQuestionWidget Use Redux widget data text session product question renders when associated product is selected 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="sessionTextQuestion3"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
              
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="sessionTextQuestion3"
                  maxlength="16000"
                  name="sessionTextQuestion3"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
